modifié:         Doxyfile 	modifié:         doc/html/annotated.html 	modifié:         doc/html/classes.html 	modifié:         doc/html/classm_1_1load_conf_1_1_config_error-members.html 	modifié:         doc/html/classm_1_1load_conf_1_1_config_error.html 	modifié:         doc/html/classm_1_1load_conf_1_1_load_conf-members.html 	modifié:         doc/html/classm_1_1load_conf_1_1_load_conf.html 	modifié:         doc/html/classm_1_1log_1_1_log-members.html 	modifié:         doc/html/classm_1_1log_1_1_log.html 	modifié:         doc/html/classm_1_1log_1_1_single_level_filter-members.html 	modifié:         doc/html/classm_1_1log_1_1_single_level_filter.html 	modifié:         doc/html/classm_1_1log_1_1bcolors-members.html 	modifié:         doc/html/classm_1_1log_1_1bcolors.html 	modifié:         doc/html/classm_1_1log_1_1lvl-members.html 	modifié:         doc/html/classm_1_1log_1_1lvl.html 	modifié:         doc/html/classm_1_1login_1_1_login-members.html 	modifié:         doc/html/classm_1_1login_1_1_login.html 	modifié:         doc/html/classsuper_tornado_1_1_base_handler-members.html 	modifié:         doc/html/classsuper_tornado_1_1_base_handler.html 	modifié:         doc/html/classsuper_tornado_1_1_disconnection_handler-members.html 	modifié:         doc/html/classsuper_tornado_1_1_disconnection_handler.html 	modifié:         doc/html/classsuper_tornado_1_1_global_vars-members.html 	modifié:         doc/html/classsuper_tornado_1_1_global_vars.html 	modifié:         doc/html/classsuper_tornado_1_1_main_handler-members.html 	modifié:         doc/html/classsuper_tornado_1_1_main_handler.html 	modifié:         doc/html/classsuper_tornado_1_1_unauthorized_handler-members.html 	modifié:         doc/html/classsuper_tornado_1_1_unauthorized_handler.html 	modifié:         doc/html/classsuper_tornado_1_1_video_handler-members.html 	modifié:         doc/html/classsuper_tornado_1_1_video_handler.html 	modifié:         doc/html/classsuper_tornado_1_1_w_socket_handler-members.html 	mod

--- a/doc/latex/classsuper_tornado_1_1_base_handler.tex
+++ b/doc/latex/classsuper_tornado_1_1_base_handler.tex
@@ -35,4 +35,4 @@ else null
 
 The documentation for this class was generated from the following file\-:\begin{DoxyCompactItemize}
 \item 
-c/super\-Tornado.\-py\end{DoxyCompactItemize}
+super\-Tornado.\-py\end{DoxyCompactItemize}
