--- a/doc/latex/classsuper_tornado_1_1_disconnection_handler.tex
+++ b/doc/latex/classsuper_tornado_1_1_disconnection_handler.tex
@@ -33,4 +33,4 @@ def \hyperlink{classsuper_tornado_1_1_disconnection_handler_a342baf9e09790a755c5
 
 The documentation for this class was generated from the following file\-:\begin{DoxyCompactItemize}
 \item 
-c/super\-Tornado.\-py\end{DoxyCompactItemize}
+super\-Tornado.\-py\end{DoxyCompactItemize}
