--- a/doc/latex/classsuper_tornado_1_1_global_vars.tex
+++ b/doc/latex/classsuper_tornado_1_1_global_vars.tex
@@ -4,7 +4,7 @@
 \subsection*{Static Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{classsuper_tornado_1_1_global_vars_a0091cf90c3955b9dd9917e441d6d307f}{tuple {\bfseries config} = \hyperlink{classm_1_1load_conf_1_1_load_conf}{Load\-Conf}(\char`\"{}../m/file/conf\char`\"{})}\label{classsuper_tornado_1_1_global_vars_a0091cf90c3955b9dd9917e441d6d307f}
+\hypertarget{classsuper_tornado_1_1_global_vars_a0091cf90c3955b9dd9917e441d6d307f}{tuple {\bfseries config} = \hyperlink{classm_1_1load_conf_1_1_load_conf}{Load\-Conf}(\char`\"{}m/file/conf\char`\"{})}\label{classsuper_tornado_1_1_global_vars_a0091cf90c3955b9dd9917e441d6d307f}
 
 \item 
 \hypertarget{classsuper_tornado_1_1_global_vars_a027c191330c93fb0ce920d0c0cd7b8b2}{tuple {\bfseries log} = \hyperlink{classm_1_1log_1_1_log}{Log}()}\label{classsuper_tornado_1_1_global_vars_a027c191330c93fb0ce920d0c0cd7b8b2}
@@ -58,4 +58,4 @@
 
 The documentation for this class was generated from the following file\-:\begin{DoxyCompactItemize}
 \item 
-c/super\-Tornado.\-py\end{DoxyCompactItemize}
+super\-Tornado.\-py\end{DoxyCompactItemize}
