--- a/doc/man/man3/superTornado_GlobalVars.3
+++ b/doc/man/man3/superTornado_GlobalVars.3
@@ -1,4 +1,4 @@
-.TH "superTornado.GlobalVars" 3 "Wed Apr 2 2014" "Version 1.0" "MI Protect Privacy" \" -*- nroff -*-
+.TH "superTornado.GlobalVars" 3 "Thu Apr 3 2014" "Version 1.0" "MI Protect Privacy" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -10,7 +10,7 @@ superTornado.GlobalVars \-
 
 .in +1c
 .ti -1c
-.RI "tuple \fBconfig\fP = \fBLoadConf\fP('\&.\&./m/file/conf')"
+.RI "tuple \fBconfig\fP = \fBLoadConf\fP('m/file/conf')"
 .br
 .ti -1c
 .RI "tuple \fBlog\fP = \fBLog\fP()"
