--- a/doc/latex/classsuper_tornado_1_1_video_handler.tex
+++ b/doc/latex/classsuper_tornado_1_1_video_handler.tex
@@ -37,4 +37,4 @@ Else
 
 The documentation for this class was generated from the following file\-:\begin{DoxyCompactItemize}
 \item 
-c/super\-Tornado.\-py\end{DoxyCompactItemize}
+super\-Tornado.\-py\end{DoxyCompactItemize}
